--- a/phase-1/get/beginning/index.html
+++ b/phase-1/get/beginning/index.html
@@ -7,10 +7,17 @@
   </head>
   
   <body>
+    <!-- The static portion of my site, 
+     empty in content, but descriptive in structure
+     ready to be populated with some dynamic content
+     we'll use fetch() API to do-->
     <h1>Gotta <code>fetch()</code> 'em all!</h1>
     <h2>Dog Fact: <span id="dog"></span></h2>
+      <!-- dog facts go here, through JS fetch()-->
     <h2>Pokemon: <span id="pokemon"></span></h2>
+      <!-- pokemon info goes here, through JS fetch()-->
     <h2>Game of Thrones</h2>
+      <!-- game of thrones goes here, through JS fetch()-->
     <ul id="got"></ul>
   </body>
 </html>
