--- a/phase-1/manipulation/beginning/index.html
+++ b/phase-1/manipulation/beginning/index.html
@@ -8,15 +8,16 @@
 
 <html lang="en">
   <head>
-  <meta lang="en" />
-  <script defer src="./index.js"></script>
+    <meta lang="en" />
+    <script defer src="./index.js"></script>
   </head>
 
   <body>
     <h1>DOM Manipulation</h1>
-    <!-- class -->
+    <!-- class: identifying related elements-->
     <address class="address">by <strong>Sakib Rasul</strong></address>
-    <!-- id -->
+    <address class="address">by <strongg>Sakib Rasul!!</strongg></address>
+    <!-- id: uniquely identifying one element -->
     <div id="dates">
       <p id="today">Today.</p>
       <p id="tomorrow">Tomorrow.</p>
